<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Новое событие"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/name_of_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="text"
        android:hint="Название события"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/beginning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_of_act"
        android:layout_margin="10dp"
        android:text="Начало"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/begin_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/beginning"
        android:layout_toRightOf="@id/beginning"
        android:layout_alignBaseline="@id/beginning"
        android:layout_below="@+id/name_of_act"
        android:maxLength="2"
        android:hint="@string/default_time_value"
        android:textColorHint="@color/transparent"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="numberDecimal"
        android:background="@color/colorPrimaryLight"/>

    <EditText
        android:id="@+id/begin_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/begin_hour"
        android:layout_toRightOf="@id/begin_hour"
        android:layout_alignBaseline="@id/beginning"
        android:layout_below="@+id/name_of_act"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:maxLength="2"
        android:hint="@string/default_time_value"
        android:textColorHint="@color/transparent"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="numberDecimal"
        android:background="@color/colorPrimaryLight"/>

    <EditText
        android:id="@+id/end_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/end_min"
        android:layout_toLeftOf="@id/end_min"
        android:layout_alignBaseline="@id/beginning"
        android:layout_below="@+id/name_of_act"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="2dp"
        android:maxLength="2"
        android:hint="@string/default_time_value"
        android:textColorHint="@color/transparent"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="numberDecimal"
        android:background="@color/colorPrimaryLight"/>

    <EditText
        android:id="@+id/end_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/beginning"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/name_of_act"
        android:maxLength="2"
        android:hint="@string/default_time_value"
        android:textColorHint="@color/transparent"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="numberDecimal"
        android:background="@color/colorPrimaryLight"/>

    <TextView
        android:id="@+id/ending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/beginning"
        android:layout_toStartOf="@id/end_hour"
        android:layout_toLeftOf="@id/end_hour"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="Конец"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Описание события..."
        android:textColorHint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/beginning"
        android:layout_margin="10dp"
        android:inputType="textMultiLine"
        android:background="@color/colorPrimaryLight"
        android:maxLines="9"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notif_title"
        android:text="Уведомления"
        android:layout_below="@id/description"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutMode="opticalBounds"
        android:layout_below="@id/notif_title"
        android:layout_margin="10dp"
        android:id="@+id/notif_cont">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/add"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:background="@drawable/ic_add_circle_outline_24dp"
        android:layout_alignTop="@id/notif_title"
        android:layout_toEndOf="@id/notif_title"
        android:layout_toRightOf="@id/notif_title"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/cancel"
        android:layout_toLeftOf="@id/cancel"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/save"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"/>


</RelativeLayout>